--- a/client/src/components/styles/JoinModal.scss
+++ b/client/src/components/styles/JoinModal.scss
@@ -211,7 +211,7 @@
 						display: flex;
 						flex-direction: column;
 						align-items: center;
-						font-size: 13pt;
+						font-size: 11pt;
 						padding: 10px;	
 
 						span {
@@ -249,8 +249,9 @@
 							align-items: center;
 
 							.li-image {
-								width: 15%;
-								height: 15%;
+								width: 12%;
+								min-width: 55px;
+								// height: 15%;
 								margin: 0 5%;
 							}
 							.li-text {
