--- a/client/src/components/styles/FeedbackModal.scss
+++ b/client/src/components/styles/FeedbackModal.scss
@@ -132,6 +132,8 @@ $check-color: $brand-success;
 				align-items: center;
 				height: 70%;
 				z-index: 25;
+				height: auto;
+				padding: 6px 0;
 
 				.tags-title-text {
 					position: absolute;
